--- a/estimate/embeddings.ipynb
+++ b/estimate/embeddings.ipynb
@@ -6,17 +6,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "input_path = \"../data/blooms.csv\"\n",
+    "checkpoint = \"lightning_logs/version_9/checkpoints/epoch=49-step=1200.ckpt\"\n",
+    "output_path = \"../data/embeddings.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import torch\n",
     "import pandas as pd\n",
     "from torch.utils.data import DataLoader\n",
     "from transformer import LinearData, Transformer, LitTransformer\n",
     "\n",
     "# use the data from ../generate\n",
-    "samples_df = pd.read_csv(\"../data/blooms.csv\")\n",
+    "samples_df = pd.read_csv(input_path)\n",
     "dataset = LinearData(samples_df)\n",
     "loader = DataLoader(dataset, batch_size=64)\n",
-    "\n",
-    "checkpoint = \"lightning_logs/version_0/checkpoints/epoch=39-step=1280.ckpt\"\n",
     "lit_model = LitTransformer.load_from_checkpoint(checkpoint, model = Transformer())\n",
     "\n",
     "z = []\n",
@@ -40,7 +49,7 @@
     "\n",
     "z0 = torch.cat(z, dim=0)\n",
     "z0 = z0.view(z0.size(0), -1).numpy()\n",
-    "np.savetxt(\"../data/embeddings.csv\", z0, delimiter=',')\n"
+    "np.savetxt(output_path, z0, delimiter=',')"
    ]
   }
  ],
