--- a/estimate/integrated_gradients.ipynb
+++ b/estimate/integrated_gradients.ipynb
@@ -6,14 +6,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "input_path = \"../data/blooms.csv\"\n",
+    "checkpoint = \"lightning_logs/version_9/checkpoints/epoch=49-step=1200.ckpt\"\n",
+    "output_path = \"../data/attributions.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "from torch.utils.data import DataLoader\n",
     "from transformer import LinearData, Transformer, LitTransformer\n",
     "\n",
     "# use the data from ../generate\n",
-    "samples_df = pd.read_csv(\"../data/blooms.csv\")\n",
+    "samples_df = pd.read_csv(input_path)\n",
     "dataset = LinearData(samples_df)\n",
-    "loader = DataLoader(dataset, batch_size = 64)"
+    "loader = DataLoader(dataset, batch_size=64)"
    ]
   },
   {
@@ -24,7 +35,6 @@
    "source": [
     "from captum.attr import IntegratedGradients\n",
     "\n",
-    "checkpoint = \"lightning_logs/version_0/checkpoints/epoch=39-step=1280.ckpt\"\n",
     "lit_model = LitTransformer.load_from_checkpoint(checkpoint, model = Transformer())\n",
     "\n",
     "def forward(model):\n",
@@ -37,13 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "i_hat.shape\n",
-    "np.savetxt(\"../data/attributions.csv\", np.reshape(i_hat, (64, -1)), delimiter=',')"
+    "np.savetxt(output_path, np.reshape(i_hat, (64, -1)), delimiter=',')"
    ]
   },
   {
