validation in concept model

--- a/estimate/concept_bottleneck.ipynb
+++ b/estimate/concept_bottleneck.ipynb
@@ -16,7 +16,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from torch.utils.data import DataLoader\n",
+    "import torch\n",
+    "from torch.utils.data import DataLoader, Subset\n",
     "from concept import ConceptData\n",
     "\n",
     "# use the data from ../generate\n",
@@ -24,7 +25,11 @@
     "concepts = pd.read_csv(\"../data/concepts.csv\")\n",
     "\n",
     "dataset = ConceptData(samples_df, concepts)\n",
-    "loader = DataLoader(dataset, batch_size=16)\n"
+    "train, validation = Subset(dataset, torch.arange(375)), Subset(dataset, torch.arange(375, 500))\n",
+    "loaders = {\n",
+    "  \"train\": DataLoader(train, batch_size=16),\n",
+    "  \"validate\": DataLoader(validation, batch_size=16)\n",
+    "}"
    ]
   },
   {
@@ -46,8 +51,8 @@
     "concepts\n",
     "model = ConceptBottleneck()\n",
     "lit_model = LitConcept(model)\n",
-    "trainer = L.Trainer(max_epochs=40, default_root_dir=\"concept_logs\")\n",
-    "trainer.fit(model=lit_model, train_dataloaders=loader)"
+    "trainer = L.Trainer(max_epochs=100, default_root_dir=\"concept_logs\")\n",
+    "trainer.fit(lit_model, loaders[\"train\"], loaders[\"validate\"])"
    ]
   },
   {
@@ -61,7 +66,9 @@
     "lit_model.model.eval()\n",
     "p_hat = []\n",
     "with torch.no_grad():\n",
-    "  for x, c, _ in loader:\n",
+    "  for x, c, _ in loaders[\"train\"]:\n",
+    "    p_hat.append(lit_model.model(x)[1])\n",
+    "  for x, c, _ in loaders[\"validate\"]:\n",
     "    p_hat.append(lit_model.model(x)[1])\n",
     "\n",
     "pd.DataFrame(torch.concatenate(p_hat)).to_csv(\"../data/p_hat_concept.csv\")"
