validation in transformer

--- a/estimate/simple_transformer.ipynb
+++ b/estimate/simple_transformer.ipynb
@@ -16,7 +16,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from torch.utils.data import DataLoader\n",
+    "import torch\n",
+    "from torch.utils.data import DataLoader, Subset\n",
     "from transformer import LinearData\n",
     "from transformer import Transformer\n",
     "\n",
@@ -24,8 +25,11 @@
     "samples_df = pd.read_csv(\"../data/blooms.csv\")\n",
     "\n",
     "dataset = LinearData(samples_df)\n",
-    "loader = DataLoader(dataset, batch_size=16)\n",
-    "x, y = next(iter(loader))\n"
+    "train, validation = Subset(dataset, torch.arange(375)), Subset(dataset, torch.arange(375, 500))\n",
+    "loaders = {\n",
+    "  \"train\": DataLoader(train, batch_size=16),\n",
+    "  \"validate\": DataLoader(validation, batch_size=16)\n",
+    "}"
    ]
   },
   {
@@ -41,8 +45,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "\n",
     "model = Transformer()\n",
     "z, probs = model(torch.randn((16, 50, 144)))"
    ]
@@ -64,8 +66,8 @@
     "from transformer import LitTransformer\n",
     "\n",
     "lit_model = LitTransformer(model)\n",
-    "trainer = L.Trainer(max_epochs=40)\n",
-    "trainer.fit(model=lit_model, train_dataloaders=loader)"
+    "trainer = L.Trainer(max_epochs=100)\n",
+    "trainer.fit(lit_model, loaders[\"train\"], loaders[\"validate\"])"
    ]
   },
   {
@@ -77,7 +79,10 @@
     "lit_model.model.eval()\n",
     "p_hat = []\n",
     "with torch.no_grad():\n",
-    "  for x, _ in loader:\n",
+    "  for x, _ in loaders[\"train\"]:\n",
+    "    p_hat.append(lit_model.model(x)[1])\n",
+    "\n",
+    "  for x, _ in loaders[\"validate\"]:\n",
     "    p_hat.append(lit_model.model(x)[1])\n",
     "\n",
     "pd.DataFrame(torch.concatenate(p_hat)).to_csv(\"../data/p_hat.csv\")"
