--- a/estimate/check.Rmd
+++ b/estimate/check.Rmd
@@ -10,10 +10,15 @@ knitr::opts_chunk$set(warnings = FALSE, message = FALSE)
 ```{r}
 library(tidyverse)
 library(glue)
+set.seed(20240203)
+my_theme <- theme_classic() +
+  theme()
+theme_set(my_theme)
 ```
 
+
 ```{r}
-p_hat <- read_csv("../data/p_hat.csv")
+p_hat <- read_csv("../data/p_hat_concept.csv")
 colnames(p_hat) <- c("index", "prob")
 
 p_hat |>
@@ -23,14 +28,28 @@ p_hat |>
 ```{r}
 blooms <- read_csv("../data/blooms.csv")
 class_data <- p_hat |>
-  mutate(subject = glue("subject_{index + 1}")) |>
+  mutate(
+    subject = glue("subject_{index + 1}"),
+    train = ifelse(row_number() <= 375, "training", "testing")
+  ) |>
   left_join(select(blooms, subject, class))
 
 ggplot(class_data) +
-  geom_histogram(aes(prob, fill = class), position = "identity", alpha = 0.8)
+  geom_histogram(aes(prob, fill = class), position = "identity", alpha = 0.8) +
+  scale_fill_manual(values = c("#730739", "#4BA68C")) +
+  facet_grid(train ~ ., scales = "free_y") +
+  scale_y_continuous(expand = c(0, 0, 0, 0.9)) +
+  scale_x_continuous(expand = c(0, 0)) +
+  labs(x = "logit(p)", y = "Count") +
+  theme(
+    axis.title = element_text(size = 16),
+    strip.text = element_text(size = 16, angle = 0),
+    legend.position = "none"
+  )
+ggsave("~/Desktop/laboratory/talks/2024/20240212/figures/concept_probs.png", width = 4,  height = 4)
 ```
 
 ```{r}
 class_data |>
-  count(class, prob > 0)
+  count(train, class, prob > 0)
 ```
