--- a/estimate/simple_transformer.ipynb
+++ b/estimate/simple_transformer.ipynb
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For future reference, here were the packages we installed for this package.\n",
+    "For future reference, here were the packages we installed for this example.\n",
     "\n",
     "```\n",
     "conda install conda-forge::lightning\n",
