reproducibility - set seed

--- a/estimate/concept_bottleneck.ipynb
+++ b/estimate/concept_bottleneck.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "### Data Loader\n",
     "\n",
-    "Before we can estimate any model, we should load in the data that we created in `linear.Rmd`. We'll reshape it so that we can sample random subjects in each batch."
+    "Before we can estimate any model, we should load in the data that we created in `concept.Rmd`. We'll reshape it so that we can sample random subjects in each batch."
    ]
   },
   {
@@ -21,6 +21,7 @@
     "from concept import ConceptData\n",
     "\n",
     "# use the data from ../generate\n",
+    "torch.manual_seed(20240210)\n",
     "samples_df = pd.read_csv(\"../data/blooms.csv\")\n",
     "concepts = pd.read_csv(\"../data/concepts.csv\")\n",
     "\n",
@@ -81,10 +82,14 @@
     "For future reference, here were the packages we installed for this package.\n",
     "\n",
     "```\n",
-    "conda install conda-forge::lightning\n",
-    "conda install conda-forge::pandas\n",
-    "conda install conda-forge::tensorboard\n",
-    "conda install pytorch::captum\n",
+    "conda create -n interpretability python=3.12\n",
+    "conda activate interpretability\n",
+    "\n",
+    "conda install -y conda-forge::lightning\n",
+    "conda install -y conda-forge::pandas\n",
+    "conda install -y conda-forge::tensorboard\n",
+    "conda install -y conda-forge::transformers\n",
+    "conda install -y pytorch::captum\n",
     "```"
    ]
   },
@@ -110,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
