--- a/estimate/simple_transformer.ipynb
+++ b/estimate/simple_transformer.ipynb
@@ -22,6 +22,7 @@
     "from transformer import Transformer\n",
     "\n",
     "# use the data from ../generate\n",
+    "torch.manual_seed(20240210)\n",
     "samples_df = pd.read_csv(\"../data/blooms.csv\")\n",
     "\n",
     "dataset = LinearData(samples_df)\n",
@@ -95,6 +96,9 @@
     "For future reference, here were the packages we installed for this example.\n",
     "\n",
     "```\n",
+    "conda create -n interpretability python=3.12\n",
+    "conda activate interpretability\n",
+    "\n",
     "conda install conda-forge::lightning\n",
     "conda install conda-forge::pandas\n",
     "conda install conda-forge::tensorboard\n",
